header alignment issue for empty pages

--- a/docroot/themes/cypress_store/less/style.less
+++ b/docroot/themes/cypress_store/less/style.less
@@ -33,12 +33,13 @@ body{
 					a{
 					    padding: 0 2px !important;
 					    margin-right: 13px !important;
-					    margin-top: -8px;
+					    margin-top: -4px;
 					    background: none;
 
 					    &:hover, &:focus{
 					    	background: none;
 					    	opacity: 0.5;
+					    	color: #3780cb;
 					    }
 					    .caret{
 					    	display: none;
@@ -76,7 +77,7 @@ body{
 		}
 	}
 
-	.path-frontpage,.path-user{
+	.not-logged-in{
 
 		.user-menu{
 
@@ -106,32 +107,32 @@ body{
 		}
 	}
 	
-	.user-logged-in.path-user .region-header .primary-menu .primary-menu-list,
+	/*.user-logged-in.path-user .region-header .primary-menu .primary-menu-list,
 	.user-logged-in.path-search .region-header .primary-menu .primary-menu-list,
 	.user-logged-in.path-checkout .region-header .primary-menu .primary-menu-list  {
 		padding-left: 36px;
-	}
-	.user-logged-in.path-frontpage .region-header .primary-menu .primary-menu-list {
+	}*/
+	.user-logged-in .region-header .primary-menu .primary-menu-list {
 		padding-left: 36px;
 	}
-	.user-logged-in.path-search .user-menu ul.menu.nav li a,
-	.user-logged-in.path-checkout .user-menu ul.menu.nav li a{
+	/*.user-logged-in.path-search .user-menu ul.menu.nav li a,*/
+	/*.user-logged-in .user-menu ul.menu.nav li a{
 	   	margin-top: -4px;
-	}
+	}*/
 	
 	@-moz-document url-prefix() {
-	   .path-frontpage .region-header nav#block-mainmenu ul,
-	   .path-user .region-header nav#block-mainmenu ul {
+	   /*.path-frontpage .region-header nav#block-mainmenu ul,*/
+	   .not-logged-in .region-header nav#block-mainmenu ul {
 		   	left: 3em;
 			position: relative;
 	   }
-	   .user-logged-in.path-user .region-header nav#block-mainmenu ul,
-	   .user-logged-in.path-frontpage .region-header nav#block-mainmenu ul {
+	   /*.user-logged-in.path-user .region-header nav#block-mainmenu ul,*/
+	   .user-logged-in .region-header nav#block-mainmenu ul {
 	   		left: 0;
 	   }
-	   .user-logged-in.path-user .primary-menu-list, 
-	   .user-logged-in.path-search .primary-menu-list, 
-	   .user-logged-in.path-frontpage .primary-menu-list{
+	   /*.user-logged-in.path-user .primary-menu-list, 
+	   .user-logged-in.path-search .primary-menu-list,*/ 
+	   .user-logged-in .primary-menu-list{
 	   		padding-left: 30px !important;
 	   }
 	   
@@ -590,6 +591,9 @@ footer{
 		.slick-slide:focus {
 		    outline: 0;
 		}
+		.slick-track{
+			margin: 0 auto;
+		}
 	}
 }
 
@@ -719,16 +723,16 @@ footer{
 		left: 2em;
 		top: 0.7em;
 	}
-	.path-frontpage.has-glyphicons .region-header .block-search-form-block{
+	.not-logged-in .region-header .block-search-form-block{
 		top: 6em;
 	}
-	.path-user.has-glyphicons .region-header .block-search-form-block{
+	.not-logged-in.path-user.has-glyphicons .region-header .block-search-form-block{
 		top: 5.35em;
 	}
-	.user-logged-in.path-frontpage.has-glyphicons .region-header .block-search-form-block{
+	/*.user-logged-in.path-frontpage.has-glyphicons .region-header .block-search-form-block{
 		top: 9em;
-	}
-	.user-logged-in.path-user.has-glyphicons .region-header .block-search-form-block{
+	}*/
+	.user-logged-in .region-header .block-search-form-block{
 		top: 9em;
 	}
 	.block-search-form-block input[type="submit"]{
@@ -828,6 +832,9 @@ footer{
 	.main-menu .menu.nav{
 		padding-left: 0 !important;
 	}
+	.not-logged-in.path-user.has-glyphicons .region-header .block-search-form-block{
+		top: 4.5em;
+	}
 }
 @media only screen and (min-width: 365px) and (max-width: 400px){
 	.icons li{
@@ -844,7 +851,7 @@ footer{
 	.region-header .block-search-form-block{
 		left: 1em;
 	}
-	.path-frontpage .user-menu ul.menu.nav li a, .path-user .user-menu ul.menu.nav li a{
+	.not-logged-in .user-menu ul.menu.nav li a {
 		margin-left: 17em;
 		margin-top: -8px;
 	}
@@ -958,26 +965,26 @@ footer{
 .user-logged-in a[href="/user/login"]{
 	display: none;
 }
-.path-user ul.mobile-menu li {
+/*.path-user ul.mobile-menu li {
+    display: none;
+}*/
+.not-logged-in ul.mobile-menu li.anonymous {
+    display: block !important;
+}
+.user-logged-in ul.mobile-menu li {
+    display: block !important;
+}
+.not-logged-in ul.mobile-menu li {
     display: none;
 }
-.path-user ul.mobile-menu li.anonymous {
+/*.path-frontpage ul.mobile-menu li.anonymous {
     display: block !important;
-}
-.user-logged-in.path-user ul.mobile-menu li {
+}*/
+/*.user-logged-in.path-frontpage ul.mobile-menu li {
     display: block !important;
-}
-.path-frontpage ul.mobile-menu li {
-    display: none;
-}
-.path-frontpage ul.mobile-menu li.anonymous {
-    display: block !important;
-}
-.user-logged-in.path-frontpage ul.mobile-menu li {
-    display: block !important;
-}
-.user-logged-in.path-frontpage .mobile-menu img.close-nav-user, 
-.user-logged-in.path-user .mobile-menu img.close-nav-user{
+}*/
+/*.user-logged-in.path-frontpage .mobile-menu img.close-nav-user, */
+.user-logged-in .mobile-menu img.close-nav-user{
     margin-top: 2.3em;
     position: relative;
     right: 20px;
@@ -989,10 +996,10 @@ footer{
 .mobile-menu a {
     padding: 8px 0;
 }
-.path-frontpage .mobile-menu img.close-nav-user {
+/*.path-frontpage .mobile-menu img.close-nav-user {
     right: 0;
     margin-top: 20px;
-}
+}*/
 /*end for mobiles*/
 
 
